[package]
name = "google-drive"
version = "0.1.0"
edition = "2024"

[dependencies]
google-drive3 = "*"
hyper = { version = "1.8.1", features = ["full"] }
hyper-rustls = "0.27.7"
rustls = "0.23.36"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1", features = ["full", "rt", "net"] }
yup-oauth2 = "12.1.2"
